// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-button-group> Component basic usage 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="secondary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            About Pega
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 3 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 4 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 5 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component content items button group 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
  </ul>
  <bolt-button size="xsmall"
               color="primary"
               width="auto"
               border-radius="full"
               align="center"
               transform="none"
               icon-only
  >
    <button type="button"
            class="c-bolt-button c-bolt-button--xsmall c-bolt-button--primary c-bolt-button--border-radius-full c-bolt-button--center c-bolt-button--icon-only"
            is="shadow-root"
    >
      <replace-with-children class="c-bolt-button__item">
        Example
      </replace-with-children>
      <replace-with-grandchildren class="c-bolt-button__icon">
        <span class="c-bolt-button__icon-sizer">
          <bolt-icon slot="after"
                     name="close"
          >
          </bolt-icon>
        </span>
      </replace-with-grandchildren>
    </button>
  </bolt-button>
  <bolt-button size="xsmall"
               color="secondary"
               width="auto"
               border-radius="regular"
               align="center"
               transform="none"
               icon-only
  >
    <button type="button"
            class="c-bolt-button c-bolt-button--xsmall c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--icon-only"
            is="shadow-root"
    >
      <replace-with-children class="c-bolt-button__item">
        About Pega
      </replace-with-children>
      <replace-with-grandchildren class="c-bolt-button__icon">
        <span class="c-bolt-button__icon-sizer">
          <bolt-icon slot="after"
                     name="close"
          >
          </bolt-icon>
        </span>
      </replace-with-grandchildren>
    </button>
  </bolt-button>
  <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
    This is text with the tags stripped.
  </p>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component icon only button group 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="xsmall"
                   color="primary"
                   width="auto"
                   border-radius="full"
                   align="center"
                   transform="none"
                   icon-only
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--xsmall c-bolt-button--primary c-bolt-button--border-radius-full c-bolt-button--center c-bolt-button--icon-only"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Example
          </replace-with-children>
          <replace-with-grandchildren class="c-bolt-button__icon">
            <span class="c-bolt-button__icon-sizer">
              <bolt-icon slot="after"
                         name="close"
              >
              </bolt-icon>
            </span>
          </replace-with-grandchildren>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="xsmall"
                   color="secondary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
                   icon-only
      >
        <button type="button"
                class="c-bolt-button c-bolt-button--xsmall c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--icon-only"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            About Pega
          </replace-with-children>
          <replace-with-grandchildren class="c-bolt-button__icon">
            <span class="c-bolt-button__icon-sizer">
              <bolt-icon slot="after"
                         name="close"
              >
              </bolt-icon>
            </span>
          </replace-with-grandchildren>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;
